# tesi_ghiglio

./: .gitignore  .gitmodules  note  passes
app_poli/: note_app
app_poli/fsciam-tesisciamanna/: .gitignore  CMakeLists.txt  Object.cpp  Object.h  README.md  kernel_runner.cpp  kernel_runner.h  main.cpp  smart_surveillance_types.h  surveillance.recipe
app_poli/fsciam-tesisciamanna/classifier_kernel/: CMakeLists.txt  classifier_kernel.cpp
app_poli/fsciam-tesisciamanna/gui_kernel/: CMakeLists.txt  gui_kernel.cpp
app_poli/fsciam-tesisciamanna/motion_kernel/: CMakeLists.txt  motion_kernel.cpp
app_poli/fsciam-tesisciamanna/tracker_kernel/: CMakeLists.txt  HungarianAlgorithm.h  Result.cpp  Result.h  Tracker.cpp  Tracker.h  tracker_kernel.cpp
benchmarks/: char.cpp  division.cpp
benchmarks/edge-aibench-master/Autonomous_Vehicle/Lane_Detection/: README.md
benchmarks/edge-aibench-master/Autonomous_Vehicle/Lane_Detection/data_provider/: tf_io_pipline_tools.py
benchmarks/edge-aibench-master/Autonomous_Vehicle/Lane_Detection/tools/: evaluate_lanenet_on_tusimple.py  global_config.py  lanenet.py  lanenet_back_end.py  lanenet_front_end.py  test_lanenet.py  train_lanenet.py  vgg16_based_fcn.py
benchmarks/edge-aibench-master/ICU_Patient_Monitor/Heart_Failure_Prediction/: README.md  UI.py  aggr.npz  data_generator.py  div.py  rec.py  res  result.0.npz  result.1.npz  result.10.npz  result.11.npz  result.12.npz  result.13.npz  result.2.npz  result.3.npz  result.4.npz  result.5.npz  result.6.npz  result.7.npz  result.8.npz  result.9.npz  test.3digitICD9.seqs  test.3digitICD9.types  test.dates  test.morts  test.pids  test.seqs  test.types
board/: cpi  cpi.json  script.py
board/benchmarks/matmul/: main.llvmcpp
board/benchmarks/misc/dijsktra/: main.llvmcpp
board/benchmarks/misc/math/: main.llvmcpp  snipmath.h
board/benchmarks/misc/matmul/: main.llvmcpp
board/benchmarks/misc/sort/: script.py  vec.h
board/benchmarks/polybench-c-4.2.1-beta/: gesummv  make.sh
board/benchmarks/sort/: main.llvmcpp
board/stm32f407/: note
board/stm32f469/: board  cpi
code/: CMakeLists.txt
code/AddIRDebug/: AddIRDebug.cpp  CMakeLists.txt
code/instrumentation/: CMakeLists.txt  compile_commands.json  notes
code/instrumentation/Instrument/: CMakeLists.txt  InjectFuncCall.cpp
code/map/: .clang-format  .clang-tidy  CMakeLists.txt  compile_commands.json  map.cpp  replaceDebug.hpp  utils.hpp
code/map/.cache/clangd/index/: map.cpp.6D444C420F87461B.idx  replaceDebug.hpp.D285C7509DFC4A4D.idx  utils.hpp.FA7C747B1770DBD1.idx
code/misc/: Makefile  commands_opt  fix.py  script.py  script_both.sh  script_map.sh  test.c  test2.c  test3.c  test5.c  test_instr.c
code/parse_trace/: CMakeLists.txt  callGraph.hpp  compile_commands.json  costmap.cpp  cpi.json  cpu_data.json  cpu_data_wrong.json  extendCall.cpp  getCost.cpp  map.cpp  map.hpp  parseTrace.cpp  sourcelocation.cpp  sourcelocation.h
code/parse_trace/.cache/clangd/index/: callGraph.hpp.869E93E29614EDEB.idx  map.hpp.56C3857F9874C669.idx  parseTrace.cpp.D655D24A90CD7794.idx
code/parse_trace/CountInstr/: CMakeLists.txt  CountBB.cpp  CountBB.h
code/parse_trace/Instrument/: CMakeLists.txt  InjectFuncCall.cpp
code/parse_trace/SimpleInstrument/: CMakeLists.txt  SimpleInject.cpp  SimpleInject.h
code/parse_trace/include/: FilesUtils.h  callGraph.h  callGraph.hpp  costmap.h  extendCall.h  getCost.h  getIC.h  map.h  map.hpp  parsejson.h  sourcelocation.h
code/pass/: CMakeLists.txt  compile_commands.json
code/pass/.cache/clangd/index/: AddIRDebug.cpp.1AF63DE45FA3F79D.idx
code/pass/AddIRDebug/: AddIRDebug.cpp  CMakeLists.txt
code/test/: a.out  comandi_llvm  commands_opt  script.py  script_both.sh  script_trace.sh  test.c  test.ll  test2.c  test3.c  test4.c  test_debug.c  test_instr.c
doc/: note.tex  ref.bib  tesi
doc/slides/: slides.tex
doc/slides-diff/: slides.tex
doc/slides-energy/: attr-ass.c  slides.tex  test3.dot
doc/slides-energy/1/: attr-llvm.c  slides.tex  test3.c  test5.dot
doc/slides-energy/2/: node.c  prop.c  slides.tex
doc/slides-iot/: slides.tex
doc/slides-rules/: slides.tex
doc/tesi/: Makefile  README.md  bibliography.bib  bibliography.blg  geometry.sty.aux  introduction.tex  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.dvi  thesis.out  thesis.tex  thesis.toc
doc/tesi/chapter-1/: chapter-1.tex  ifthen.c  ifthen.ll
doc/tesi/chapter-2/: chapter-2.tex  merge.dot
doc/tesi/svg-inkscape/: logo-polimi_svg-tex.pdf_tex
doc/tesi/title-page/: title-page.tex
misure/: gesumm_3_150_stack  symm_5x5_100_stack
misure/12-01/: deriche_200_10  estimates  gemver  gemver_300_1  gemver_320_1  gemver_360_1  gesummv_300_1  measures  symm_100_1  syrk
misure/12-01./: 2mm  3mm  atax  correlation_100_1  correlation_10_500  gemver_340_1  gesummv  measures  syr2k  syr2k_100_1  syrk_100_1  trmm  trmm_150_1
misure/12-01/elaborate/: average.py  compare.py  est_01_02_1  est_iio0.5  est_iio2v2  est_memacc  est_vmov  estimates  estimates2  estimates3  func_est  func_meas  funcalls  measures  pairs  pairs.py  script.py
misure/16-03/: gemver_10_900_heap  gesummv_10_900_heap  syr2k_10_900_heap  syrk_10_900_heap  trmm_10_900_heap
misure/16-03/elaborate/: estimates  measures  script.py
misure/16-12/gemver_10/: esitmates  gemver_10_100  gemver_10_1000  gemver_10_200  gemver_10_300  gemver_10_400  gemver_10_500  gemver_10_600  gemver_10_700  gemver_10_800  gemver_10_900  measures  script.py
misure/16-12/gesumm_10/: gesumm_10_1000  gesumm_10_200  gesumm_10_300  gesumm_10_400  gesumm_10_500  gesumm_10_600  gesumm_10_700  gesumm_10_800  gesumm_10_900  measures  script.py
misure/16-12/symm_10/: measures  script.py  symm_10_50  symm_10_60  symm_10_70  symm_10_80  symm_10_90
misure/prova/: estimates  gemver_300_10  gemver_30_100  gesumm_300_10  symm_30x20_10  syrk_5x5_150_stack
papers/energy_est/: rapl links
papers/iot-fog/: note
papers/iot-fog/3/: da scaricare
papers/source code/: note
suppl/3.1/: Spreadsheet - Complete experimental results.ods
(+4 files in other folders)
